--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "e-icon-picker": "^1.0.7",
     "echarts": "^4.6.0",
     "element-ui": "^2.12.0",
     "flv.js": "^1.5.0",
