--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "match_pc",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.20.0",
-    "core-js": "^3.6.5",
-    "e-icon-picker": "^1.0.7",
-    "echarts": "^4.9.0",
-    "element-ui": "^2.13.2",
-    "js-cookie": "^2.2.1",
-    "less-loader": "^7.0.2",
-    "node-sass": "^4.14.1",
-    "nprogress": "^0.2.0",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.3.0",
-    "vue": "^2.6.11",
-    "vue-clipboard2": "^0.3.1",
-    "vue-pdf": "^4.1.0",
-    "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.4.5",
-    "vuex": "^3.5.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "match_pc",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "eslint --fix --ext .js,.vue src"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "axios": "^0.20.0",
+        "core-js": "^3.6.5",
+        "e-icon-picker": "^1.0.7",
+        "echarts": "^4.9.0",
+        "element-ui": "^2.13.2",
+        "js-cookie": "^2.2.1",
+        "less-loader": "^7.0.2",
+        "node-sass": "^4.14.1",
+        "nprogress": "^0.2.0",
+        "sass-loader": "^10.0.2",
+        "style-loader": "^1.3.0",
+        "vue": "^2.6.11",
+        "vue-clipboard2": "^0.3.1",
+        "vue-pdf": "^4.1.0",
+        "vue-quill-editor": "^3.0.6",
+        "vue-router": "^3.4.5",
+        "vuex": "^3.5.1"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
