--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "style-loader": "^1.3.0",
         "vue": "^2.6.11",
         "vue-clipboard2": "^0.3.1",
+        "vue-markdown": "^2.2.4",
         "vue-pdf": "^4.1.0",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.4.5",
