--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "echarts": "^4.9.0",
         "element-ui": "^2.13.2",
         "js-cookie": "^2.2.1",
+        "js-file-download": "^0.4.12",
         "less-loader": "^7.0.2",
         "node-sass": "^4.14.1",
         "nprogress": "^0.2.0",
